# AirBench

./: .gitignore  README.md  original.toml  pyproject.toml
data/: data.md  data.yaml  imputation.py  visualise.py
data/data_download_scripts/: aurn_download.ipynb  cnemc_download.ipynb  cpcb_download.ipynb  epa_download.ipynb  openaq_download.ipynb
data/data_preprocess_scripts/: aurn_preprocess.py  china_sampling.ipynb  cnemc_preprocess.py  cpcb_preprocess.py  eea_preprocess.py  epa_preprocess.py  openaq_preprocess.py  sinaica_preprocess.py
data/to_hf_dataset/: aq_dataset_builder.py  aq_datasets.yaml
eval/: compute_local_leaderboard.py  config.yaml  data_statistics.ipynb  datasets.yaml  eval.md  leaderboard_helpers.py  leaderboard_utils.py  plot_forecast.ipynb  run.py
eval/experiments/: auto_ets.py  chronos2.py  chronos_bolt.py  dlinear.py  kairos_model.py  moirai.py  moirai2.py  patchtst.py  seasonal_naive.py  sundial.py  timesfm1.0.py  timesfm2.0.py  timesfm2.5.py  tirex_model.py  visiontspp.py
eval/src/timebench/evaluation/: saver.py
