[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airbench"
version = "0.1.0"
description = "Air quality time series benchmarking pipeline"
requires-python = ">=3.10"
dependencies = [
    # data pipeline
    "beautifulsoup4",
    "matplotlib",
    "pandas",
    "pyyaml",
    "rdata",
    "requests",
    "seaborn",
    "statsmodels",
    "tqdm",
    "urllib3",
    # dataset builder (timebench / HuggingFace Arrow)
    "datasets",
    "numpy",
]

[tool.hatch.build.targets.wheel]
packages = ["eval/src/timebench"]
